--- a/index.html
+++ b/index.html
@@ -117,20 +117,26 @@
             <h4> Games </h4>
                 <li>My first 2D Game:
                     <a
-                    href="SuperArmy on Web/index.html">
+                    href="https://bjhsiehweb.updog.co/SuperArmy%20on%20Web/index.html">
                     SuperArmy
                     </a>
                 </li>
                 <li>My first 3D Game:
                     <a
-                    href="SuperCannonOnWeb/index.html">
+                    href="https://bjhsiehweb.updog.co/SuperCannonOnWeb/index.html">
                     SuperCannon
                     </a>
                 </li>
                 <li>Cannon Game:
                     <a
-                    href="CannonOnWeb/index.html">
+                    href="https://bjhsiehweb.updog.co/CannonOnWeb/index.html">
                     Cannon
+                    </a>
+                </li>
+                <li>BeautifulView:
+                    <a
+                    href="https://bjhsiehweb.updog.co/view/index.html">
+                    View
                     </a>
                 </li>
             </script>
