--- a/CAFinal.html
+++ b/CAFinal.html
@@ -35,7 +35,7 @@
 
 <body>
     <div id="doc" class="markdown-body container-fluid comment-enabled" style="position: relative;"><h1 id="CA-Final-Project"><a class="anchor hidden-xs" href="#CA-Final-Project" title="CA-Final-Project"><span class="octicon octicon-link"></span></a>CA Final Project</h1><p>104703053 謝秉瑾</p><hr><h3 id="Abstract"><a class="anchor hidden-xs" href="#Abstract" title="Abstract"><span class="octicon octicon-link"></span></a>Abstract</h3><p>主角：史瓦特<br>
-史瓦特是一個喜愛飛行的玩家，為了能在天空中自由的飛翔，他不惜花費大量的金錢，一次又一次的挑戰自己的極限，在廢棄的城市中穿越各種障礙，展現自身的反應速度，表演各式的高難度動作。</p><hr><h3 id="Video"><a class="anchor hidden-xs" href="#Video" title="Video"><span class="octicon octicon-link"></span></a>Video</h3><hr><p><a href="https://www.youtube.com/watch?v=ukr-p7Yk4XM&amp;feature=youtu.be" target="_blank" rel="noopener"><img src="https://i.imgur.com/22INsql.jpg" alt=""></a></p><p><a href="https://drive.google.com/open?id=1pSExDUPBjGlkJYAo0fIZ582SkWrn4mxN" target="_blank" rel="noopener">Video download</a></p><h3 id="game-link"><a class="anchor hidden-xs" href="#game-link" title="game-link"><span class="octicon octicon-link"></span></a>game link</h3><hr><p><a href="https://drive.google.com/open?id=1qLqgsphqbmWhCfwwNQmHC2CEXAQYfGTI" target="_blank" rel="noopener">Mac download</a><br>
+史瓦特是一個喜愛飛行的玩家，為了能在天空中自由的飛翔，他不惜花費大量的金錢，一次又一次的挑戰自己的極限，在廢棄的城市中穿越各種障礙，展現自身的反應速度，表演各式的高難度動作。</p><hr><h3 id="Video"><a class="anchor hidden-xs" href="#Video" title="Video"><span class="octicon octicon-link"></span></a>Video</h3><p><a href="https://www.youtube.com/watch?v=ukr-p7Yk4XM&amp;feature=youtu.be" target="_blank" rel="noopener"><img src="https://i.imgur.com/22INsql.jpg" alt=""></a></p><p><a href="https://drive.google.com/open?id=1pSExDUPBjGlkJYAo0fIZ582SkWrn4mxN" target="_blank" rel="noopener">Video download</a></p><hr><h3 id="game-link"><a class="anchor hidden-xs" href="#game-link" title="game-link"><span class="octicon octicon-link"></span></a>game link</h3><p><a href="https://drive.google.com/open?id=1qLqgsphqbmWhCfwwNQmHC2CEXAQYfGTI" target="_blank" rel="noopener">Mac download</a><br>
 <a href="https://drive.google.com/open?id=1frWJ7T6DmU87xIuBj82twjiN0tYOQKbC" target="_blank" rel="noopener">Windows download</a></p><hr><h3 id="Tools"><a class="anchor hidden-xs" href="#Tools" title="Tools"><span class="octicon octicon-link"></span></a>Tools</h3><ul>
 <li>Unity3D</li>
 <li>Maya</li>
@@ -58,7 +58,7 @@ particle製作下雨環境、死亡噴血效果<br>
             <ul id="ui-toc" class="ui-toc-dropdown dropdown-menu" aria-labelledby="tocLabel">
                 <div class="toc"><ul class="nav">
 <li class=""><a href="#CA-Final-Project" title="CA Final Project">CA Final Project</a><ul class="nav">
-<li><a href="#Abstract" title="Abstract">Abstract</a></li>
+<li class=""><a href="#Abstract" title="Abstract">Abstract</a></li>
 <li class=""><a href="#Video" title="Video">Video</a></li>
 <li><a href="#game-link" title="game link">game link</a></li>
 <li><a href="#Tools" title="Tools">Tools</a></li>
@@ -73,7 +73,7 @@ particle製作下雨環境、死亡噴血效果<br>
     <div id="ui-toc-affix" class="ui-affix-toc ui-toc-dropdown unselectable hidden-print" data-spy="affix" style="top:17px;display:none;"  >
         <div class="toc"><ul class="nav">
 <li class=""><a href="#CA-Final-Project" title="CA Final Project">CA Final Project</a><ul class="nav">
-<li><a href="#Abstract" title="Abstract">Abstract</a></li>
+<li class=""><a href="#Abstract" title="Abstract">Abstract</a></li>
 <li class=""><a href="#Video" title="Video">Video</a></li>
 <li><a href="#game-link" title="game link">game link</a></li>
 <li><a href="#Tools" title="Tools">Tools</a></li>
