--- a/CAFinal.html
+++ b/CAFinal.html
@@ -39,7 +39,7 @@
 <a href="https://drive.google.com/open?id=1frWJ7T6DmU87xIuBj82twjiN0tYOQKbC" target="_blank" rel="noopener">Windows download</a></p><hr><h3 id="Tools"><a class="anchor hidden-xs" href="#Tools" title="Tools"><span class="octicon octicon-link"></span></a>Tools</h3><ul>
 <li>Unity3D</li>
 <li>Maya</li>
-</ul><hr><h3 id="Source"><a class="anchor hidden-xs" href="#Source" title="Source"><span class="octicon octicon-link"></span></a>Source</h3><ul>
+</ul><hr><h3 id="Source"><a class="anchor hidden-xs" href="#Source" title="Source"><span class="octicon octicon-link"></span></a>Source</h3><p><a href="https://github.com/Bin-Jing/CAFinal" target="_blank" rel="noopener">Code</a></p><ul>
 <li>自行製作：<br>
 火箭飛行器模型<br>
 particle製作下雨環境、死亡噴血效果<br>
@@ -49,7 +49,7 @@ particle製作下雨環境、死亡噴血效果<br>
 <li>網路素材：<br>
 角色、場景元件、直升機(Unity Asset Store)<br>
 飛行、死亡、勝利、坐著動畫(<a href="http://mixamo.com" target="_blank" rel="noopener">mixamo.com</a>)</li>
-</ul></div>
+</ul><div dir="ltr" class="resize-sensor" style="position: absolute; left: -10px; top: -10px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"><div class="resize-sensor-expand" style="position: absolute; left: -10px; top: -10px; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"><div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 100000px; height: 100000px;"></div></div><div class="resize-sensor-shrink" style="position: absolute; left: -10px; top: -10px; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"><div style="position: absolute; left: 0; top: 0; transition: 0s; width: 200%; height: 200%"></div></div></div></div>
     <div class="ui-toc dropup unselectable hidden-print" style="display:none;">
         <div class="pull-right dropdown">
             <a id="tocLabel" class="ui-toc-label btn btn-default" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" title="Table of content">
@@ -58,7 +58,7 @@ particle製作下雨環境、死亡噴血效果<br>
             <ul id="ui-toc" class="ui-toc-dropdown dropdown-menu" aria-labelledby="tocLabel">
                 <div class="toc"><ul class="nav">
 <li class=""><a href="#CA-Final-Project" title="CA Final Project">CA Final Project</a><ul class="nav">
-<li class=""><a href="#Abstract" title="Abstract">Abstract</a></li>
+<li><a href="#Abstract" title="Abstract">Abstract</a></li>
 <li class=""><a href="#Video" title="Video">Video</a></li>
 <li><a href="#game-link" title="game link">game link</a></li>
 <li><a href="#Tools" title="Tools">Tools</a></li>
@@ -73,7 +73,7 @@ particle製作下雨環境、死亡噴血效果<br>
     <div id="ui-toc-affix" class="ui-affix-toc ui-toc-dropdown unselectable hidden-print" data-spy="affix" style="top:17px;display:none;"  >
         <div class="toc"><ul class="nav">
 <li class=""><a href="#CA-Final-Project" title="CA Final Project">CA Final Project</a><ul class="nav">
-<li class=""><a href="#Abstract" title="Abstract">Abstract</a></li>
+<li><a href="#Abstract" title="Abstract">Abstract</a></li>
 <li class=""><a href="#Video" title="Video">Video</a></li>
 <li><a href="#game-link" title="game link">game link</a></li>
 <li><a href="#Tools" title="Tools">Tools</a></li>
