--- a/stylegan/faces.html
+++ b/stylegan/faces.html
@@ -1,7 +1,4 @@
 <SCRIPT LANGUAGE="JavaScript">
-
-<!-- Begin
-
 var theImages = new Array() // do not change this
 
 
@@ -10,9 +7,6 @@ for (var i = 0; i < 1000; i++) {
     theImages[i] = path+"example-"+i.toString()+".png";
 //    console.log(path+"example-"+i.toString()+".png")
  }
-
-// do not edit anything below this line
-
 var j = 0;
 var p = theImages.length;
 var preBuffer = new Array()
@@ -20,12 +14,12 @@ for (i = 0; i < p; i++){
    preBuffer[i] = new Image()
    preBuffer[i].src = theImages[i]
 }
-var whichImage = Math.round(Math.random()*(p-1));
-function showImage(){
-document.write('<img src="'+theImages[whichImage]+'">');
-}
 
-//  End -->
+function reloadIMG(){
+    var whichImage = Math.round(Math.random()*(p-1));
+    document.getElementById("MainIMG").src=theImages[whichImage];
+    console.log("reload")
+}
 </script>
 
 <center>
@@ -35,11 +29,25 @@ document.write('<img src="'+theImages[whichImage]+'">');
 <BODY>
     
 <SCRIPT LANGUAGE="JavaScript">
-<!-- Begin
-showImage();
-//  End -->
+var whichImage = Math.round(Math.random()*(p-1));
+document.write('<img src="'+theImages[whichImage]+'" id="MainIMG">');
+var Interval = setInterval('reloadIMG();',5000);
+var trigger = true;
+function refreshBtn(){
+    if(trigger){
+        clearInterval(Interval);
+        document.getElementById("RefreshBtn").textContent="resume refresh";
+        trigger = false;
+    }else{
+        Interval = setInterval('reloadIMG();',5000);
+        document.getElementById("RefreshBtn").textContent="stop refresh";
+        trigger = true;
+    }
+    
+}
 </script>
 <div>
-    <a href="javascript:window.location.reload(true)" class="continue">refresh</a>
+    <button onclick="reloadIMG()">refresh</button>
+    <button onclick="refreshBtn()" id="RefreshBtn" >stop refresh</button>
 </div>
 </center>
